--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,3 +1,6 @@
 {
   "suggest.noselect": true,
+  "pyright.inlayHints.functionReturnTypes": false,
+  "pyright.inlayHints.variableTypes": false,
+  "pyright.inlayHints.parameterTypes": false,
 }
